--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
       background: linear-gradient(90deg,#25D366,#00a884);
     }
 
+    .email {
+      background: linear-gradient(90deg,#4285F4,#34A853);
+    }
+
     @media (max-width: 420px) {
       .photo-frame { width: 110px; height: 110px; }
       .container { padding: 20px; }
@@ -110,11 +114,12 @@
       <img src="https://raw.githubusercontent.com/pyetro450/Linktree-pyetro2/refs/heads/main/linktree-pyetro.jpg" alt="Foto de Pyetro Vilamil">
     </div>
     <h1>Pyetro Vilamil</h1>
-    <p class="handle">@pyetro.cruz_</p>
+    <p class="handle">Aspirante a desenvolvedor de software</p>
 
     <div class="links">
-      <a class="link-btn instagram" href="https://instagram.com/pyetro.cruz_" target="_blank">Ir para Instagram</a>
-      <a class="link-btn whatsapp" href="https://wa.me/5548991551031" target="_blank">Abrir no WhatsApp</a>
+      <a class="link-btn instagram" href="https://instagram.com/pyetro.cruz_" target="_blank" rel="noopener noreferrer">Ir para Instagram</a>
+      <a class="link-btn whatsapp" href="https://wa.me/5548991551031" target="_blank" rel="noopener noreferrer">Abrir no WhatsApp</a>
+      <a class="link-btn email" href="mailto:pyetrovilamil@gmail.com">Enviar E-mail</a>
     </div>
   </div>
 </body>
