--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <img src="https://raw.githubusercontent.com/pyetro450/Linktree-pyetro2/refs/heads/main/linktree-pyetro.jpg" alt="Foto de Pyetro Vilamil">
     </div>
     <h1>Pyetro Vilamil</h1>
-    <p class="handle">Aspirante a desenvolvedor de software</p>
+    <p class="handle">Desenvolvedor de software</p>
 
     <div class="links">
       <a class="link-btn instagram" href="https://instagram.com/pyetro.cruz_" target="_blank" rel="noopener noreferrer">Ir para Instagram</a>
